It's ALIVE... Almost.

--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
 	"machines": [
 		{
+			"id": "fedora",
 			"name": "Fedora",
+			"defaults": "defaults.json",
 			"sections": [
 				{
 					"id": "repos",
@@ -68,7 +70,7 @@
 						{
 							"name": "cls",
 							"commands": [
-								"if ! grep -q \"# Custom Aliases\" $HOME/.bashrc; then sudo printf \"\n# Custom Aliases\n\" >> $HOME/.bashrc fi"
+								"if ! grep -q \"# Custom Aliases\" $HOME/.bashrc; then sudo printf \"\\n# Custom Aliases\\n\" >> $HOME/.bashrc fi"
 							]
 						}
 					]
@@ -80,7 +82,7 @@
 						{
 							"name": "Development Tools",
 							"commands": [
-								"sudo dnf groupinstall --disablerepo=\\* --enablerepo=fedora,updates \"Development Tools\""
+								"sudo dnf -q -y groupinstall --disablerepo=\\* --enablerepo=fedora,updates \"Development Tools\""
 							]
 						}
 					]
