--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,31 @@ add_subdirectory(extern/json)
 add_subdirectory(extern/fmt)
 target_include_directories(${TARGET_NAME} PRIVATE json)
 target_link_libraries(${TARGET_NAME} PRIVATE nlohmann_json::nlohmann_json fmt::fmt)
+
+# CPack stuff
+set(CPACK_GENERATOR "RPM")
+
+set(CPACK_RPM_USER_BINARY_SPECFILE "${CMAKE_CURRENT_SOURCE_DIR}/release/DoYourThing.spec")
+set(CPACK_PACKAGE_NAME "DoYourThing")
+set(CPACK_PACKAGE_SUMMARY "A small installer/configurator for your linux setups.")
+
+set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/release/DESCRIPTION.txt")
+set(CPACK_PACKAGE_VERSION ${VERSION})
+set(CPACK_PACKAGE_RELEASE 1)
+set(CPACK_PACKAGE_LICENSE "MIT")
+set(CPACK_PACKAGE_GROUP "Applications/Productivity/Other")
+set(CPACK_PACKAGE_CONTACT "Milovan Gudelj <i.like.martians@gmail.com>")
+set(CPACK_PACKAGE_VENDOR "i.like.martians Inc.")
+set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/milovangudelj/doyourthing")
+
+set(CPACK_PACKAGE_BUILD_REQUIRES "cmake >= 3.15")
+
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
+set(CPACK_INSTALL_PREFIX "/usr/local/bin")
+set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
+
+set(CPACK_RPM_CHANGELOG_FILE "${CMAKE_CURRENT_SOURCE_DIR}/release/CHANGELOG.txt")
+file(READ ${CPACK_RPM_CHANGELOG_FILE} CPACK_RPM_SPEC_CHANGELOG)
+install(TARGETS doyourthing RUNTIME DESTINATION bin)
+
+include(CPack)
