--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(TARGET_NAME doyourthing) # Target name
 set(CMAKE_CXX_STANDARD 20) # C++ Standard
 
 # Internal library
-add_library(libdyt STATIC
+add_library(dyt STATIC
 	src/manager.cc
 	src/action.cc
 	src/section.cc
@@ -22,7 +22,7 @@ include_directories(include)
 add_executable(${TARGET_NAME} src/targets/doyourthing.cc)
 
 # Link internal library to main executable
-target_link_libraries(${TARGET_NAME} PRIVATE libdyt)
+target_link_libraries(${TARGET_NAME} PRIVATE dyt)
 
 # json - Lightweight library for parsing json data - https://github.com/nlohmann/json.git
 add_subdirectory(extern/json)
@@ -49,11 +49,15 @@ set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/milovangudelj/doyourthing")
 set(CPACK_PACKAGE_BUILD_REQUIRES "cmake >= 3.15")
 
 set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
-set(CPACK_INSTALL_PREFIX "/usr/local/bin")
+set(CPACK_INSTALL_PREFIX "/opt")
 set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
 
 set(CPACK_RPM_CHANGELOG_FILE "${CMAKE_CURRENT_SOURCE_DIR}/release/CHANGELOG.txt")
 file(READ ${CPACK_RPM_CHANGELOG_FILE} CPACK_RPM_SPEC_CHANGELOG)
+
+set(CPACK)
+
+install(FILES "${PROJECT_SOURCE_DIR}/config/defaults.json" DESTINATION "/opt/${CPACK_PACKAGE_NAME}/config/")
 install(TARGETS doyourthing RUNTIME DESTINATION bin)
 
 include(CPack)
